--- a/views/regions.tt
+++ b/views/regions.tt
@@ -67,7 +67,7 @@
 
 <script type="text/javascript" src="[% request.uri_base %]/components/flexslider/jquery.flexslider-min.js"></script>
 <script type="text/javascript" src="[% request.uri_base %]/components/jquery.bxslider/jquery.bxslider.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1TWStdIWQYeNDBKpE6SgJSEd4EerEdg&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=[% sleutel %]&callback=initMap" async defer></script>
 <script type="text/javascript" src="[% request.uri_base %]/js/jquery.stellar.min.js"></script>
 <script type="text/javascript" src="[% request.uri_base %]/js/theme-scripts.js"></script>
 <script type="text/javascript" src="[% request.uri_base %]/js/scripts.js"></script>
