--- a/views/themes.tt
+++ b/views/themes.tt
@@ -137,7 +137,7 @@
 
 [% INCLUDE layouts/footer.tt %]
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ1TWStdIWQYeNDBKpE6SgJSEd4EerEdg&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=[% sleutel %]&callback=initMap" async defer></script>
 <script type="text/javascript" src="[% request.uri_base %]/js/theme-scripts.js"></script>
 <script type="text/javascript" src="[% request.uri_base %]/js/scripts.js"></script>
 
