--- a/templates/500.html.tt
+++ b/templates/500.html.tt
@@ -5,6 +5,7 @@
         <h1>System Error (500)</h1>
         <br>
         <p class="center"><b>Our apologies. The system has encountered an error.</b></p>
+        <p>We’ve logged the issue and our developers have been notified.</p>
         <br>    
         <p class="center"><a href="javascript:history.back()" >
             <i class="fa fa-hand-o-left"></i>
